--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,12 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = "0.5.0-rc.1"
+rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
+serde = "1.0"
+serde_json = "1.0.68"
+serde_derive = "1.0.130"
 
+[dependencies.rocket_contrib]
+version = "0.4.10"
+default-features = false
+features = ["json"]
