--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,6 @@ rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"]
 serde = "1.0"
 serde_json = "1.0.68"
 serde_derive = "1.0.130"
-
-[dependencies.rocket_contrib]
-version = "0.4.10"
-default-features = false
-features = ["json"]
+openssl = "0.10.36"
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
